<resources>
    <string name="app_name">HopSpottr</string>
    <string name="facebook_app_id">276261782822928</string>
    <string name="signup_error">Error occured while saving data</string>
    <string name="network_error">Network Error</string>
    <string name="setup_quick">Let\'s get you set up real quick!</string>
    <string name="pick_categories">Pick the categories you are most interested in:</string>
    <string name="pick_places">Pick some of your favorite places.</string>
    <string name="choose_places">Choose a few places you\'d like to follow for your news feed:</string>
    <string name="third_step_title">Looks like you already have friends on Hopspottr!</string>
    <string name="follow_friends">Follow your friends to see their posts and check-ins:</string>
    <string name="step_one">Step 1/3</string>
    <string name="step_two">Step 2/3</string>
    <string name="step_three">Step 3/3</string>
    <string name="btn_title_next">Next</string>
    <string name="btn_title_finish">Finish</string>
    <string name="btn_follow_all">Follow all</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_check_ins">Check-Ins</string>
    <string name="nav_points">Points</string>
    <string name="nav_find_people">Find People</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_invite_friends">Invite Friends</string>
    <string name="nav_share">Share</string>
    <string name="nav_help">Help</string>

    <string name="title_news_feed">News Feed</string>
    <string name="title_trending">Trending</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_activity">Activity</string>

    <string name="btn_restaurants">Restaurants</string>
    <string name="btn_bars_nightlife">Bars &amp; Nightlife</string>
    <string name="btn_coffee_tea">Coffee &amp; Tea</string>
    <string name="btn_hookah_bars">Hookah Bars</string>

    <string name="str_followers">followers</string>

    <string name="footer_title">Hopspottr is so much more fun with friends!</string>

    <string name="nothing_trending_for_restaurants">Nothing is trending for Restaurants.\nCheck back later.</string>
    <string name="nothing_trending_for_bars">Nothing is trending for Bars &amp; Nightlife.\nCheck back later.</string>
    <string name="nothing_trending_for_coffee">Nothing is trending for Coffee &amp; Tea.\nCheck back later.</string>
    <string name="nothing_trending_for_hookah">Nothing is trending for Hookah Bars.\nCheck back later.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
