<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_check_ins"
            android:icon="@drawable/ic_check_ins"
            android:title="@string/nav_check_ins" />
        <item
            android:id="@+id/nav_points"
            android:icon="@drawable/ic_point"
            android:title="@string/nav_points" />
        <item
            android:id="@+id/nav_find_people"
            android:icon="@drawable/ic_find_people"
            android:title="@string/nav_find_people" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_invite_friends"
            android:icon="@drawable/ic_invite_friends"
            android:title="@string/nav_invite_friends" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_share"
            android:title="@string/nav_share" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/nav_help" />
    </group>

</menu>
