<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_first_start_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hopspottr.luca.com.hopspottr.ui.startup.FirstStartUpActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_gravity="center_horizontal"
        android:text="@string/setup_quick"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="32dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="64dp"
        android:background="@color/colorGrey">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/colorPaleBlue"
            android:layout_weight="1"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:text="@string/step_one"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:text="@string/pick_categories"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Button
            android:id="@+id/btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ButtonNextStep"
            android:layout_alignParentBottom="true"
            android:text="@string/btn_title_next"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/btn_next"/>

    </RelativeLayout>

</LinearLayout>
