<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="hopspottr.luca.com.hopspottr.fragment.TrendingFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/btn_restaurant"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_item_pressed"
            android:text="@string/btn_restaurants"
            android:singleLine="true"
            android:layout_marginRight="2dp"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/btn_bars_nightlife"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_item"
            android:text="@string/btn_bars_nightlife"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:singleLine="true"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/btn_coffee_tea"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_item"
            android:text="@string/btn_coffee_tea"
            android:textColor="@color/colorBlack"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:singleLine="true"
            android:gravity="center"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/btn_hookah_bars"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/button_item"
            android:text="@string/btn_hookah_bars"
            android:layout_marginLeft="2dp"
            android:textColor="@color/colorBlack"
            android:singleLine="true"
            android:gravity="center"
            android:textSize="10sp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin">

    </ListView>

</LinearLayout>
